--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.3",
     "@reduxjs/toolkit": "^1.8.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
