--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@reduxjs/toolkit": "^1.8.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "recharts": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
