--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "dms",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "recharts": "^2.0.8"
@@ -56,5 +57,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
