--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,14 @@
     "compression": "^1.7.4",
     "concurrently": "^7.2.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
+    "razorpay": "^2.8.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
