--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.3",
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.1.0",
