--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.0.8"
   },
   "scripts": {
