register api integrate

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-swipeable-views": "^0.14.0",
-    "recharts": "^2.0.8"
+    "recharts": "^2.0.8",
+    "sweetalert2": "^11.4.24"
   },
   "scripts": {
     "start": "react-scripts start",
